--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,13 +1,9 @@
 [package]
-name = "squid-broker"
+name = "shared"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
-rand = "0.8.5"
-rand_distr = "0.4.3"
 serde.workspace = true
 serde_json.workspace = true
-shared = { version = "0.1.0", path = "../shared" }
-zmq.workspace = true
