--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -1,11 +1,15 @@
 [project]
 name = "squid"
-version = "0.1.0"
-description = "Squid python API"
+version = "0.1.1"
+description = "Squid simulation runner python API"
 authors = [{ name = "Ben Barber", email = "ben@vivum.ai" }]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = ["pyzmq"]
+classifiers = [
+   "Programming Language :: Python :: 3",
+   "Operating System :: OS Independent",
+]
 
 [build-system]
-requires = ["setuptools>=45", "wheel"]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
