--- a/api/python/pyproject.toml
+++ b/api/python/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.3"
 description = "Squid simulation runner python API"
 authors = [{ name = "Ben Barber", email = "ben@vivum.ai" }]
 requires-python = ">=3.11"
-dependencies = ["pyzmq"]
+dependencies = ["pyzmq", "orjson"]
 classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
