--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [workspace]
-members = ["broker", "cli", "shared", "worker"]
 resolver = "2"
+members = ["broker", "cli", "manager", "shared"]
 
 [workspace.dependencies]
-anyhow = "1.0.93"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
+anyhow = "1.0.94"
+bincode = "1.3.3"
+clap = { version = "4.5.23", features = ["derive"] }
+log = { version = "0.4.22", features = ["std"] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+shared = { version = "0.1.0", path = "shared" }
+toml = "0.8.19"
 zmq = "0.10.0"
