refactor for bidirectional communication and manager updates

--- a/manager/Cargo.toml
+++ b/manager/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
+bincode.workspace = true
 clap.workspace = true
 num_cpus = "1.16.0"
+shared.workspace = true
 zmq.workspace = true
