--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ anyhow = "1.0.94"
 bincode = "1.3.3"
 clap = { version = "4.5.23", features = ["derive"] }
 log = { version = "0.4.22", features = ["std"] }
+rand = "0.9.0"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 shared = { version = "0.1.0", path = "shared" }
