--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,7 +11,7 @@ clap.workspace = true
 crossterm = "0.28.1"
 csv = "1.3.1"
 log.workspace = true
-nanoid = "0.4.0"
+rand.workspace = true
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 serde_json.workspace = true
 shared.workspace = true
