--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "squid-manager"
+name = "squid-node"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 anyhow.workspace = true
-bincode.workspace = true
 clap.workspace = true
+rand.workspace = true
 shared.workspace = true
 zmq.workspace = true
