--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "shared"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+strum = { version = "0.27.1", features = ["derive"] }
 toml.workspace = true
