--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,20 @@
-[workspace]
-resolver = "2"
-members = ["broker", "cli", "node", "shared"]
+[package]
+name = "squid"
+version = "0.1.0"
+edition = "2024"
 
-[workspace.dependencies]
+[dependencies]
 anyhow = "1.0.97"
+chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
 clap = { version = "4.5.35", features = ["derive"] }
+crossterm = "0.29.0"
+csv = "1.3.1"
 log = { version = "0.4.27", features = ["std"] }
 rand = "0.9.0"
+rand_distr = "0.5.0"
+ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-shared = { version = "0.1.0", path = "shared" }
+strum = { version = "0.27.1", features = ["derive"] }
 toml = "0.8.20"
 zmq = "0.10.0"
