--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,25 @@
 [package]
 name = "squid"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.97"
-chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
-clap = { version = "4.5.35", features = ["derive"] }
+anyhow = "1.0.98"
+chrono = { version = "0.4.40", default-features = false, features = [
+  "clock",
+  "std",
+] }
+clap = { version = "4.5.37", features = ["derive"] }
 crossterm = "0.29.0"
 csv = "1.3.1"
-log = { version = "0.4.27", features = ["std"] }
-rand = "0.9.0"
-rand_distr = "0.5.0"
+rand = "0.9.1"
+rand_distr = "0.5.1"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 strum = { version = "0.27.1", features = ["derive"] }
 toml = "0.8.20"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+tui-logger = { version = "0.17.1", features = ["crossterm", "tracing-support"] }
 zmq = "0.10.0"
