--- a/example.squid.toml
+++ b/example.squid.toml
@@ -1,28 +1,28 @@
 [experiment]
-task_image = "docker.io/library/squid-task-example"
-genus = "CTRNN"
-seed_dir = "./saved_agents/2024-12-05_13-09-52"
+image = "docker.io/library/squid-task-example"
 out_dir = "./saved_agents"
 
-[species]
+[nn]
+type = "CTRNN"
 input_size = 7
 hidden_size = 2
 output_size = 4
 step_size = 0.1
-tau_bounds = [1e-5, 16]
-weight_bounds = [-16, 16]
-bias_bounds = [-16, 16]
-gain_bounds = [1e-5, 16]
 
 [ga]
 population_size = 50
 num_generations = 100
-elitism_percent = 0.10
-random_percent = 0
-mutation_chance = 0.1
+elitism_fraction = 0.1
+random_fraction = 0.0
+selection_fraction = 1.0
+mutation_probability = 0.1
 mutation_magnitude = 1
+init_method = { type = "Random" }
+selection_method = { type = "Roulette" }
+crossover_probability = 0.5
+crossover_method = { type = "Uniform" }
 save_every = 10
-save_percent = 0.10
+save_fraction = 0.1
 
 [csv_data]
 somedata = ["h1", "h2", "h3"]
