--- a/worker/python/pyproject.toml
+++ b/worker/python/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "squid"
-version = "0.3.1"
-description = "Squid simulation runner python API"
+version = "0.4.0"
+description = "Squid worker python API"
 authors = [{ name = "Ben Barber", email = "ben@vivum.ai" }]
 requires-python = ">=3.11"
 dependencies = ["pyzmq", "orjson"]
