move python worker to separate repo

--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 ENV GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no"
-RUN --mount=type=ssh pip install git+ssh://git@gitlab.com/VivumComputing/scientific/tools/squid.git#egg=squid&subdirectory=worker/python
+RUN --mount=type=ssh pip install git+ssh://git@gitlab.com/VivumComputing/scientific/tools/pysquid.git
 
 COPY simulation/ simulation/
 
