--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,26 +3,28 @@ name = "squid"
 version = "0.7.2"
 edition = "2024"
 rust-version = "1.88"
+license = "AGPL-3.0-or-later"
 
 [dependencies]
-anyhow = "1.0.98"
+anyhow = "1.0.99"
+bincode = { version = "2.0.1", features = ["serde"] }
 chrono = { version = "0.4.41", default-features = false, features = [
   "clock",
   "std",
 ] }
-clap = { version = "4.5.41", features = ["derive"] }
+clap = { version = "4.5.47", features = ["derive"] }
 crossterm = "0.29.0"
 csv = "1.3.1"
 log = "0.4.27"
-rand = "0.9.1"
+num_enum = "0.7.4"
+rand = "0.9.2"
 rand_distr = "0.5.1"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-strum = { version = "0.27.1", features = ["derive"] }
-toml = "0.9.2"
+serde_json = "1.0.143"
+toml = "0.9.5"
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = "0.3.20"
 tui-logger = { version = "0.17.3", features = ["crossterm", "tracing-support"] }
 unicode-segmentation = "1.12.0"
 zmq = "0.10.0"
