--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -4,8 +4,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-ENV GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no"
-RUN --mount=type=ssh pip install git+ssh://git@gitlab.com/VivumComputing/scientific/tools/pysquid.git
+RUN pip install git+https://github.com/benbaarber/squid-worker.git
 
 COPY simulation/ simulation/
 
