--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "squid"
-version = "0.7.2"
+version = "0.8.0"
 edition = "2024"
 rust-version = "1.88"
 license = "AGPL-3.0-or-later"
@@ -20,6 +20,7 @@ num_enum = "0.7.4"
 rand = "0.9.2"
 rand_distr = "0.5.1"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 toml = "0.9.5"
